[gd_scene load_steps=5 format=3 uid="uid://c4gbhfdftpohj"]

[ext_resource type="Script" path="res://scene/pausemenu.gd" id="1_kv2ge"]
[ext_resource type="Script" path="res://scene/PingPong/check_button.gd" id="2_1fl1n"]
[ext_resource type="AudioStream" uid="uid://ksmwjhy3bo2c" path="res://audio/Button Confirm.wav" id="2_a5odm"]
[ext_resource type="AudioStream" uid="uid://bsoyxoh6ey24i" path="res://audio/Button Focus.wav" id="3_suu2p"]

[node name="PausedMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kv2ge")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = -1.0
offset_right = 1279.0
offset_bottom = 720.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="PauseMenuLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Menu"
horizontal_alignment = 1

[node name="Resume Button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Press here to resume the game or unpause with the same button (Esc or Menu Button)"
text = "Resume Game"

[node name="GameModeOption" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameModeButton" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer/GameModeOption"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Change Game Mode Here"
popup/item_0/id = 1
popup/item_1/text = "Single Player"
popup/item_1/id = 1
popup/item_2/text = "2 Player"
popup/item_2/id = 2

[node name="ControlScheme" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/ControlScheme"]
layout_mode = 2
text = "Display Control Scheme"

[node name="CheckButton" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer/ControlScheme"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Toggles the display of the controls used. (Accessibility feature)"
alignment = 1
script = ExtResource("2_1fl1n")

[node name="Game Select Return" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Game Select Menu"

[node name="Quit Button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Press here to quit the game"
text = "Quit Game"

[node name="ButtonPressAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a5odm")

[node name="ButtonFocusAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_suu2p")

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/VBoxContainer/GameModeOption/GameModeButton" to="." method="_on_game_mode_button_item_selected"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/ControlScheme/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Game Select Return" to="." method="_on_game_select_return_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
